Fixed links not wrapping

--- a/2018/stylesheets/css/styles.css
+++ b/2018/stylesheets/css/styles.css
@@ -103,7 +103,15 @@ pre {
  */
 a {
   background-color: transparent; 
-  word-wrap: break-word; }
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto; }
 
 /**
  * 1. Remove the bottom border in Chrome 57-
